3: Trying to fix formatting issues on mobile devices

--- a/consumer.css
+++ b/consumer.css
@@ -4,6 +4,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 .content.close {
     transition: all 0.4s ease-in;
