--- a/menu.css
+++ b/menu.css
@@ -35,16 +35,12 @@
     width: 100%;
     height: 100%;
     visibility: hidden;
-    overflow: clip;
+    overflow: hidden;
 }
 .menu.open {
     visibility: visible;
     transition: all 0.5s ease-in;
     background-color: black;
-    margin: 0;
-    padding: 0;
-    width: 105vw;
-    height: 100vw;
 }
 .menu ul {
     position: absolute;
